--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Darwin Salinas <salinash2000@gmail.com>",
+  "author": "JonathanGealiano>",
   "license": "MIT",
   "dependencies": {
     "@types/express": "^4.17.21",
